--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "\"Browser based game\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src -d dist"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,12 @@
   },
   "homepage": "https://github.com/KrutikovDI/JS-_veb_dev-npm_package#readme",
   "devDependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
     "http-server": "^14.1.1"
+  },
+  "dependencies": {
+    "core-js": "^3.35.0"
   }
 }
